<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.limax.android.chatclient.LoginActivity" >

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/username" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/TextView01"
        android:layout_marginTop="43dp"
        android:text="@string/password" />

    <TextView
        android:id="@+id/textViewPlatFlag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/editTextPassword"
        android:layout_marginTop="27dp"
        android:text="@string/PlatFlag" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPassword"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@id/editTextPassword"
        android:layout_alignTop="@+id/TextView01"
        android:layout_toRightOf="@id/TextView01"
        android:ems="10"
        android:hint="@string/username"
        android:text="@string/testaccount" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/TextView01"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/testaccountpassword" />

    <EditText
        android:id="@+id/editTextPlatFlag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPassword"
        android:layout_alignRight="@+id/editTextPassword"
        android:layout_alignTop="@+id/textViewPlatFlag"
        android:layout_toRightOf="@id/editTextPassword"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/PlatFlag"
        android:text="@string/defaultPlatFlag" />

    <TextView
        android:id="@+id/textViewServers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewPlatFlag"
        android:layout_below="@+id/switchUseNDK"
        android:layout_marginTop="34dp"
        android:text="@string/serverlist" />

    <Spinner
        android:id="@+id/spinnerServers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPlatFlag"
        android:layout_alignRight="@+id/switchUseNDK"
        android:layout_alignTop="@id/textViewServers"
        android:layout_toRightOf="@id/textViewServers" />

    <Switch
        android:id="@+id/switchUseNDK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editTextPlatFlag"
        android:layout_centerVertical="true"
        android:text="@string/checkusendk" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/spinnerServers"
        android:layout_below="@+id/spinnerServers"
        android:text="@string/ButtonLogin" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewServers"
        android:layout_alignTop="@+id/buttonLogin"
        android:contentDescription="@string/limax_icon_desc"
        android:src="@drawable/ic_launcher" />

</RelativeLayout>